--- a/packaging/docker/serviceprovider/pom.xml
+++ b/packaging/docker/serviceprovider/pom.xml
@@ -7,7 +7,7 @@
   </prerequisites>
   <groupId>org.opendaylight.integration</groupId>
   <artifactId>docker-serviceprovider</artifactId>
-  <version>0.2.0-SNAPSHOT</version>
+  <version>0.2.0-Helium</version>
   <name>OpenDaylight Docker Service Provider Edition Project</name>
   <packaging>pom</packaging>
    <build>
