--- a/packaging/docker/virtualization/pom.xml
+++ b/packaging/docker/virtualization/pom.xml
@@ -7,7 +7,7 @@
   </prerequisites>
   <groupId>org.opendaylight.integration</groupId>
   <artifactId>docker-virtualization</artifactId>
-  <version>0.2.0-SNAPSHOT</version>
+  <version>0.2.0-Helium</version>
   <name>OpenDaylight Docker Virtualization Edition Project</name>
   <packaging>pom</packaging>
    <build>
