Incrementing versions by 0.0.1 for post-helium stability branch
Change-Id: I30497e76e8a05d7f5fcf65d5c0689b3695094733
Signed-off-by: Christopher O'Shea <christopher.o.shea@ericsson.com>

--- a/packaging/docker/serviceprovider/pom.xml
+++ b/packaging/docker/serviceprovider/pom.xml
@@ -7,7 +7,7 @@
   </prerequisites>
   <groupId>org.opendaylight.integration</groupId>
   <artifactId>docker-serviceprovider</artifactId>
-  <version>0.2.0-Helium</version>
+  <version>0.2.1-SNAPSHOT</version>
   <name>OpenDaylight Docker Service Provider Edition Project</name>
   <packaging>pom</packaging>
    <build>
