--- a/distributions/pom.xml
+++ b/distributions/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.opendaylight.integration</groupId>
     <artifactId>root</artifactId>
-    <version>0.2.0-Helium</version>
+    <version>0.2.1-SNAPSHOT</version>
     <relativePath>../</relativePath>
   </parent>
   <artifactId>distributions</artifactId>
