--- a/distributions/serviceprovider/pom.xml
+++ b/distributions/serviceprovider/pom.xml
@@ -9,7 +9,7 @@ see https://git.opendaylight.org/gerrit/#/c/390/
   <parent>
     <groupId>org.opendaylight.integration</groupId>
     <artifactId>distributions</artifactId>
-    <version>0.2.0-Helium</version>
+    <version>0.2.1-SNAPSHOT</version>
     <relativePath>../</relativePath>
   </parent>
 
@@ -18,18 +18,18 @@ see https://git.opendaylight.org/gerrit/#/c/390/
   <name>OpenDaylight Service Provider Edition</name>
 
   <properties>
-    <bgpcep.version>0.3.1-Helium</bgpcep.version>
+    <bgpcep.version>0.3.2-SNAPSHOT</bgpcep.version>
     <lispflowmapping.version>1.1.10</lispflowmapping.version>
-    <tcpmd5.version>1.0.0-Helium</tcpmd5.version>
+    <tcpmd5.version>1.0.1-SNAPSHOT</tcpmd5.version>
 
-    <ietf.topology.version>2013.10.21.2-Helium</ietf.topology.version>
+    <ietf.topology.version>2013.10.21.2.1-SNAPSHOT</ietf.topology.version>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.opendaylight.integration</groupId>
       <artifactId>distributions-base</artifactId>
-      <version>0.2.0-Helium</version>
+      <version>0.2.1-SNAPSHOT</version>
       <type>zip</type>
       <classifier>osgipackage</classifier>
       <!-- Make sure this isn't included on any classpath-->
