--- a/packaging/docker/base/pom.xml
+++ b/packaging/docker/base/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>org.opendaylight.integration</groupId>
     <artifactId>docker</artifactId>
-    <version>0.2.0-Helium</version>
+    <version>0.2.1-SNAPSHOT</version>
     <relativePath>../</relativePath>
   </parent>
   <artifactId>docker-base</artifactId>
