--- a/packaging/docker/pom.xml
+++ b/packaging/docker/pom.xml
@@ -7,7 +7,7 @@
   </prerequisites>
   <groupId>org.opendaylight.integration</groupId>
   <artifactId>docker</artifactId>
-  <version>0.2.0-Helium</version>
+  <version>0.2.1-SNAPSHOT</version>
   <name>OpenDaylight Docker Project</name>
   <packaging>pom</packaging>
   <modules>
