Applying the Helium.1 release patch
Change-Id: I108ba4fec37c199ed115c2bd41dfe7eb4fb6294f
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/distributions/pom.xml
+++ b/distributions/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.opendaylight.integration</groupId>
     <artifactId>root</artifactId>
-    <version>0.2.1-SNAPSHOT</version>
+    <version>0.2.1-Helium-SR1</version>
     <relativePath>../</relativePath>
   </parent>
   <artifactId>distributions</artifactId>
