--- a/distributions/extra/karaf/pom.xml
+++ b/distributions/extra/karaf/pom.xml
@@ -4,7 +4,7 @@
   <parent>
       <groupId>org.opendaylight.integration</groupId>
       <artifactId>root</artifactId>
-      <version>0.2.1-SNAPSHOT</version>
+      <version>0.2.1-Helium-SR1</version>
       <relativePath>../../../</relativePath>
    </parent>
   <artifactId>distribution-karaf</artifactId>
@@ -13,8 +13,8 @@
     <maven>3.0</maven>
   </prerequisites>
   <properties>
-    <branding.version>1.0.1-SNAPSHOT</branding.version>
-    <karaf.resources.version>1.4.3-SNAPSHOT</karaf.resources.version>
+    <branding.version>1.0.1-Helium-SR1</branding.version>
+    <karaf.resources.version>1.4.3-Helium-SR1</karaf.resources.version>
   </properties>
 
   <dependencies>
@@ -77,7 +77,7 @@
     <dependency>
       <groupId>org.opendaylight.vtn</groupId>
       <artifactId>distribution.vtn-coordinator</artifactId>
-      <version>6.0.0.1-SNAPSHOT</version>
+      <version>6.0.0.1-Helium-SR1</version>
       <type>tar.bz2</type>
       <classifier>bin</classifier>
       <exclusions>
@@ -99,7 +99,7 @@
     <dependency>
       <groupId>org.opendaylight.vtn</groupId>
       <artifactId>distribution.vtn-coordinator</artifactId>
-      <version>6.0.0.1-SNAPSHOT</version>
+      <version>6.0.0.1-Helium-SR1</version>
       <type>txt</type>
       <classifier>README</classifier>
       <exclusions>
