--- a/distributions/virtualization/pom.xml
+++ b/distributions/virtualization/pom.xml
@@ -7,7 +7,7 @@ see https://git.opendaylight.org/gerrit/#/c/390/
   <parent>
     <groupId>org.opendaylight.integration</groupId>
     <artifactId>distributions</artifactId>
-    <version>0.2.1-SNAPSHOT</version>
+    <version>0.2.1-Helium-SR1</version>
     <relativePath>../</relativePath>
   </parent>
 
@@ -22,7 +22,7 @@ see https://git.opendaylight.org/gerrit/#/c/390/
     <dependency>
       <groupId>org.opendaylight.integration</groupId>
       <artifactId>distributions-base</artifactId>
-      <version>0.2.1-SNAPSHOT</version>
+      <version>0.2.1-Helium-SR1</version>
       <type>zip</type>
       <classifier>osgipackage</classifier>
       <!-- Make sure this isn't included on any classpath-->
@@ -33,12 +33,12 @@ see https://git.opendaylight.org/gerrit/#/c/390/
     <dependency>
       <groupId>org.opendaylight.ovsdb</groupId>
       <artifactId>openstack.net-virt</artifactId>
-      <version>1.0.1-SNAPSHOT</version>
+      <version>1.0.1-Helium-SR1</version>
     </dependency>
     <dependency>
       <groupId>org.opendaylight.ovsdb</groupId>
       <artifactId>openstack.net-virt-providers</artifactId>
-      <version>1.0.1-SNAPSHOT</version>
+      <version>1.0.1-Helium-SR1</version>
     </dependency>
 
     <!-- vtn -->
@@ -46,34 +46,34 @@ see https://git.opendaylight.org/gerrit/#/c/390/
     <dependency>
       <groupId>org.opendaylight.vtn</groupId>
       <artifactId>manager</artifactId>
-      <version>0.2.1-SNAPSHOT</version>
+      <version>0.2.1-Helium-SR1</version>
     </dependency>
     <dependency>
       <groupId>org.opendaylight.vtn</groupId>
       <artifactId>manager.implementation</artifactId>
-      <version>0.2.1-SNAPSHOT</version>
+      <version>0.2.1-Helium-SR1</version>
     </dependency>
     <dependency>
       <groupId>org.opendaylight.vtn</groupId>
       <artifactId>manager.neutron</artifactId>
-      <version>0.2.1-SNAPSHOT</version>
+      <version>0.2.1-Helium-SR1</version>
     </dependency>
     <dependency>
       <groupId>org.opendaylight.vtn</groupId>
       <artifactId>manager.northbound</artifactId>
-      <version>0.2.1-SNAPSHOT</version>
+      <version>0.2.1-Helium-SR1</version>
     </dependency>
     <dependency>
       <groupId>org.opendaylight.vtn</groupId>
       <artifactId>distribution.vtn-coordinator</artifactId>
-      <version>6.0.0.1-SNAPSHOT</version>
+      <version>6.0.0.1-Helium-SR1</version>
       <type>tar.bz2</type>
       <classifier>bin</classifier>
     </dependency>
     <dependency>
       <groupId>org.opendaylight.vtn</groupId>
       <artifactId>distribution.vtn-coordinator</artifactId>
-      <version>6.0.0.1-SNAPSHOT</version>
+      <version>6.0.0.1-Helium-SR1</version>
       <type>txt</type>
       <classifier>README</classifier>
     </dependency>
