--- a/features/pom.xml
+++ b/features/pom.xml
@@ -115,6 +115,13 @@
     <!-- AAA -->
     <dependency>
       <groupId>org.opendaylight.aaa</groupId>
+      <artifactId>features-aaa-api</artifactId>
+      <version>0.2.0-SNAPSHOT</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.aaa</groupId>
       <artifactId>features-aaa</artifactId>
       <version>0.2.0-SNAPSHOT</version>
       <classifier>features</classifier>
@@ -122,7 +129,7 @@
     </dependency>
     <dependency>
       <groupId>org.opendaylight.aaa</groupId>
-      <artifactId>features-authz</artifactId>
+      <artifactId>features-aaa-authz</artifactId>
       <version>0.2.0-SNAPSHOT</version>
       <classifier>features</classifier>
       <type>xml</type>
