Move distributions/extra/karaf to distributions/karaf
Change-Id: Id875f34ceab823f3de076b2ca9b4ed558fbffa95
Signed-off-by: Ed Warnicke <eaw@cisco.com>

--- a/distributions/pom.xml
+++ b/distributions/pom.xml
@@ -14,7 +14,7 @@
   <name>OpenDaylight Distributions</name>
   <packaging>pom</packaging>
   <modules>
-    <module>extra/karaf</module>
+    <module>karaf</module>
   </modules>
   <profiles>
     <profile>
