--- a/distributions/karaf/pom.xml
+++ b/distributions/karaf/pom.xml
@@ -5,7 +5,7 @@
       <groupId>org.opendaylight.integration</groupId>
       <artifactId>root</artifactId>
       <version>0.3.0-SNAPSHOT</version>
-      <relativePath>../../../</relativePath>
+      <relativePath>../../</relativePath>
    </parent>
   <artifactId>distribution-karaf</artifactId>
   <packaging>pom</packaging>
