Break the repository index out separately from the test features
Currently, we have integration/features which is doing two things:
1)  Listing the <repositories> from all of the projects
2)  Listing the test features (like compatible-with-all) that are
    being tested by integration test.

The test features are creating user confusion, with folks doing
things like loading

odl-integration-compatible-with-all

to poor effect.  By splitting into two features repos

features-integration-index:
  Which holds only the list of repositories, and not the test features
  and is included in the shipping distribution/karaf

and

features-integration-test:
  Which holds only the test features, and is *not* shipped in the
  distribution/karaf

We should be able to clear up this confusion in the future

Change-Id: I12633819bd35a0bece2da4ac557de106d3c216e7
Signed-off-by: Ed Warnicke <eaw@cisco.com>

--- a/distributions/pom.xml
+++ b/distributions/pom.xml
@@ -15,6 +15,7 @@
   <packaging>pom</packaging>
   <modules>
     <module>karaf</module>
+    <module>test</module>
   </modules>
   <profiles>
     <profile>
