--- a/distributions/test/pom.xml
+++ b/distributions/test/pom.xml
@@ -7,7 +7,7 @@
       <version>0.3.0-SNAPSHOT</version>
       <relativePath>../../</relativePath>
    </parent>
-  <artifactId>distribution-karaf</artifactId>
+  <artifactId>distribution-test</artifactId>
   <packaging>pom</packaging>
   <prerequisites>
     <maven>3.0</maven>
@@ -65,7 +65,7 @@
 
     <!-- integration feature -->
     <dependency>
-      <artifactId>features-integration-index</artifactId>
+      <artifactId>features-integration-test</artifactId>
       <groupId>org.opendaylight.integration</groupId>
       <version>${project.version}</version>
       <classifier>features</classifier>
