Use maven-enforcer-plugin to enforce Maven version
This patch removes the unnecessary declaration of <prerequisites>
section.

As discovered in the mailing list thread linked below the <prerequisites>
section to set a minimal Maven version is deprecated and actually does
not enforce the minimal version. If we need to enforce a minimal Maven
version we need to use the maven-enforcer-plugin instead.

https://lists.opendaylight.org/pipermail/discuss/2015-January/004309.html

Change-Id: I5e5ce1af34451b0bcda51ee10ee0c181bd85393b
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <prerequisites>
-    <maven>3.0</maven>
-  </prerequisites>
   <groupId>org.opendaylight.integration</groupId>
   <artifactId>root</artifactId>
   <version>0.3.0-SNAPSHOT</version>
@@ -41,6 +38,7 @@
     <karaf.version>3.0.1</karaf.version>
     <maven.surefire.version>2.16</maven.surefire.version>
     <checkstyle.version>2.12</checkstyle.version>
+    <enforcer.version>1.3.1</enforcer.version>
   </properties>
   <modules>
     <module>distributions/</module>
@@ -262,5 +260,28 @@
         </plugin>
       </plugins>
     </pluginManagement>
+
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <version>${enforcer.version}</version>
+        <executions>
+          <execution>
+            <id>enforce-maven</id>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <requireMavenVersion>
+                  <version>3.1.1</version>
+                </requireMavenVersion>
+              </rules>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
   </build>
 </project>
