--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <feature.yangtools.version>0.7.0-SNAPSHOT</feature.yangtools.version>
     <feature.adsal.version>0.9.0-SNAPSHOT</feature.adsal.version>
     <feature.nsf.version>0.5.0-SNAPSHOT</feature.nsf.version>
+    <feature.openflowplugin.version>0.1.0-SNAPSHOT</feature.openflowplugin.version>
     <feature.ovsdb.version>1.1.0-SNAPSHOT</feature.ovsdb.version>
     <feature.ovsdb.openstack.version>1.1.0-SNAPSHOT</feature.ovsdb.openstack.version>
     <feature.groupbasedpolicy.version>0.2.0-SNAPSHOT</feature.groupbasedpolicy.version>
