Add neutron feature to integration.
Change-Id: Ib83570c0058b9d62b48ea9e33e9f6c733260c047
Signed-off-by: Ed Warnicke <eaw@cisco.com>

--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -46,6 +46,13 @@
     </dependency>
     <dependency>
       <groupId>org.opendaylight.controller</groupId>
+      <artifactId>features-neutron</artifactId>
+      <version>${feature.neutron.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
       <artifactId>features-adsal</artifactId>
       <classifier>features</classifier>
       <type>xml</type>
