--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <feature.flow.version>1.2.0-SNAPSHOT</feature.flow.version>
     <feature.yangtools.version>0.7.0-SNAPSHOT</feature.yangtools.version>
     <feature.adsal.version>0.9.0-SNAPSHOT</feature.adsal.version>
+    <feature.neutron.version>0.5.0-SNAPSHOT</feature.neutron.version>
     <feature.nsf.version>0.5.0-SNAPSHOT</feature.nsf.version>
     <feature.openflowplugin.version>0.1.0-SNAPSHOT</feature.openflowplugin.version>
     <feature.ovsdb.version>1.1.0-SNAPSHOT</feature.ovsdb.version>
