Adding topoprocessing features
1) Feature Tests Pass: https://jenkins.opendaylight.org/releng/view/topoprocessing/job/topoprocessing-merge-master/13/
2) Features Comply with Guidelines: https://git.opendaylight.org/gerrit/gitweb?p=topoprocessing.git;a=blob;f=features/src/main/resources/features.xml
	a) Feature Names: Prefixed with 'odl-' : odl-topoprocessing-all
	b) Features Descriptions: Present
	c) Features Start-Levels: No start-levels on <bundle> elements or <feature> elements
3) Features Tested: Features have been tested for functionality with
	a) feature:install odl-topoprocessing-all
	b) feature:install odl-integration-compatible-with-all
4) Integration Test Impact - none

Change-Id: I60734ea53ff3efb66dbc25225277f006171d193d
Signed-off-by: Michal Polkorab <michal.polkorab@pantheon.sk>

--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -234,6 +234,14 @@
       <type>xml</type>
     </dependency>
 
+    <dependency>
+      <groupId>org.opendaylight.topoprocessing</groupId>
+      <artifactId>features-topoprocessing</artifactId>
+      <version>${feature.topoprocessing.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+
 
     <!-- test to validate features.xml -->
     <dependency>
