--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
     <feature.packetcable.version>1.2.0-SNAPSHOT</feature.packetcable.version>
     <feature.plugin2oc.version>0.2.0-SNAPSHOT</feature.plugin2oc.version>
     <feature.tcpmd5.version>1.1.0-SNAPSHOT</feature.tcpmd5.version>
+    <feature.topoprocessing.version>0.0.1-SNAPSHOT</feature.topoprocessing.version>
     <karaf.branding.version>1.1.0-SNAPSHOT</karaf.branding.version>
     <karaf.version>3.0.1</karaf.version>
     <maven.surefire.version>2.16</maven.surefire.version>
