--- a/feature-selector/pom.xml
+++ b/feature-selector/pom.xml
@@ -4,7 +4,7 @@
   <parent>
       <groupId>org.opendaylight.integration</groupId>
       <artifactId>root</artifactId>
-      <version>0.2.2-Helium-SR2</version>
+      <version>0.2.3-SNAPSHOT</version>
       <relativePath>../</relativePath>
   </parent>
   <artifactId>feature-selector</artifactId>
