Update bgpcep features repository names and removing plugin2oc.
Bgpcep project has changed its feature layout.
Instead single feature repository, there are three of them now:
features-bgp, features-extras and features-pcep.

Among major changes, odl-bgpcep-all feature is no more.
This changes feature tests to use odl-bgpcep-bgp-all
and odl-bgpcep-pcep-all features instead.

Also: feature.bgp.version was renamed to feature.bgpcep.version

Change-Id: I48d53b544a8240e7206c163dc892e517da4ad9ba
Signed-off-by: Vratko Polak <vrpolak@cisco.com>

--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -73,6 +73,21 @@
        <groupId>org.opendaylight.bgpcep</groupId>
        <artifactId>features-bgp</artifactId>
        <classifier>features</classifier>
+       <version>${feature.bgpcep.version}</version>
+       <type>xml</type>
+    </dependency>
+    <dependency>
+       <groupId>org.opendaylight.bgpcep</groupId>
+       <artifactId>features-extras</artifactId>
+       <classifier>features</classifier>
+       <version>${feature.bgpcep.version}</version>
+       <type>xml</type>
+    </dependency>
+    <dependency>
+       <groupId>org.opendaylight.bgpcep</groupId>
+       <artifactId>features-pcep</artifactId>
+       <classifier>features</classifier>
+       <version>${feature.bgpcep.version}</version>
        <type>xml</type>
     </dependency>
     <dependency>
