BUG-2780: Fix migrated sal-compatibility feature
 - odl-adsal-compatibility was replaced by odl-openflowplugin-adsal-compatibility

Change-Id: Idca5da7c31603c65332a02078f733cb7a429d286
Signed-off-by: Michal Rehak <mirehak@cisco.com>

--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -53,12 +53,6 @@
     </dependency>
     <dependency>
       <groupId>org.opendaylight.controller</groupId>
-      <artifactId>features-adsal</artifactId>
-      <classifier>features</classifier>
-      <type>xml</type>
-    </dependency>
-    <dependency>
-      <groupId>org.opendaylight.controller</groupId>
       <artifactId>features-nsf</artifactId>
       <classifier>features</classifier>
       <type>xml</type>
@@ -100,6 +94,13 @@
     <dependency>
       <groupId>org.opendaylight.openflowplugin</groupId>
       <artifactId>features-openflowplugin-extension</artifactId>
+      <version>${feature.openflowplugin.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.openflowplugin.legacy</groupId>
+      <artifactId>features-legacy</artifactId>
       <version>${feature.openflowplugin.version}</version>
       <classifier>features</classifier>
       <type>xml</type>
