Adding features to main features.xml in integraion repo
1) Feature Tests Pass: https://jenkins.opendaylight.org/releng/job/integration-distribution-verify-master/5/testReport/
2) Features Comply with Guidelines: https://git.opendaylight.org/gerrit/gitweb?p=snmp.git;a=blob;f=features/src/main/resources/features.xml
   a) Feature Names (prefixed with 'odl-'): odl-snmp-plugin (check https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Feature_Naming)
   b) Features Descriptions: Present (check https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Description)
   c) Features Start-Levels: None
3) Features Tested: Features have been tested for functionality with
   a) feature:install odl-snmp-plugin
   b) feature:install odl-snmp-plugin, odl-integration-compatible-with-all
4) Integration Test Impact: None

Change-Id: Ifacc077dd4b46db2365e38cb58fc873ed796eb49
Signed-off-by: Steve Dean <sdean@hp.com>

--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -45,7 +45,7 @@
       <type>xml</type>
     </dependency>
     <dependency>
-      <groupId>org.opendaylight.controller</groupId>
+      <groupId>org.opendaylight.neutron</groupId>
       <artifactId>features-neutron</artifactId>
       <version>${feature.neutron.version}</version>
       <classifier>features</classifier>
@@ -258,6 +258,13 @@
       <type>xml</type>
     </dependency>
 
+    <dependency>
+      <groupId>org.opendaylight.snmp</groupId>
+      <artifactId>features-snmp</artifactId>
+      <version>${snmp.plugin.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
 
     <!-- test to validate features.xml -->
     <dependency>
