--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
     <maven.surefire.version>2.16</maven.surefire.version>
     <checkstyle.version>2.13</checkstyle.version>
     <enforcer.version>1.3.1</enforcer.version>
+    <snmp.plugin.version>1.0-SNAPSHOT</snmp.plugin.version>
   </properties>
   <modules>
     <module>distributions/</module>
@@ -262,13 +263,6 @@
            <version>${feature.packetcable.version}</version>
            <classifier>features</classifier>
           <type>xml</type>
-        </dependency>
-
-        <!-- test to validate features.xml -->
-        <dependency>
-          <groupId>org.opendaylight.yangtools</groupId>
-          <artifactId>features-test</artifactId>
-          <version>${feature.yangtools.version}</version>
         </dependency>
       </dependencies>
   </dependencyManagement>
