Adding neutron features
1) Feature Tests Pass: https://jenkins.opendaylight.org/releng/view/neutron/job/neutron-merge-master/org.opendaylight.neutron$features-neutron/22/testReport/
2) Features Comply with Guidelines: https://git.opendaylight.org/gerrit/gitweb?p=neutron.git;a=blob;f=features/src/main/features/features.xml;h=e54a8068d41e81e9075512e980682c1b39be55fc;hb=HEAD
  a) Feature Names (prefixed with 'odl-'): odl-neutron-service (check https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Feature_Naming)
  b) Features Descriptions: Present (check https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Description)
  c) Features Start-Levels: None
3) Features Tested: Features have been tested for functionality with
  a) feature:install odl-neutron-service
  b) feature:install odl-neutron-service, odl-integration-compatible-with-all
4) Integration Test Impact: None

Change-Id: Iecf47d183446dc1bc52d2ade523f13b633232809
Signed-off-by: Ed Warnicke <eaw@cisco.com>

--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -45,7 +45,7 @@
       <type>xml</type>
     </dependency>
     <dependency>
-      <groupId>org.opendaylight.controller</groupId>
+      <groupId>org.opendaylight.neutron</groupId>
       <artifactId>features-neutron</artifactId>
       <version>${feature.neutron.version}</version>
       <classifier>features</classifier>
