Adding features to main features.xml in integration repo
1) Feature Tests Pass: https://jenkins.opendaylight.org/releng/view/didm/job/didm-merge-master/lastBuild/testReport/
2) Features Comply with Guidelines: https://git.opendaylight.org/gerrit/gitweb?p=didm.git;a=blob;f=features/src/main/features/features.xml
   a) Feature Names (prefixed with 'odl-'): odl-didm-identification-api, odl-didm-identification, odl-didm-drivers-api (check https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Feature_Naming)
   b) Features Descriptions: Present (check https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Description)
   c) Features Start-Levels: None
3) Features Tested: Features have been tested for functionality with
   a) feature:install odl- didm-identification-api
   b) feature:install odl- didm-identification
   c) feature:install odl- didm-drivers-api
   d) feature:install odl- didm-identification-api, didm-identification, didm-drivers-api, odl-integration-compatible-with-all
4) Integration Test Impact: None

Change-Id: Ieb2617a5c44396630bab7a3a792fcec189dfe2b8
Signed-off-by: Steve Dean <sdean@hp.com>

--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -266,6 +266,14 @@
       <type>xml</type>
     </dependency>
 
+    <dependency>
+      <groupId>org.opendaylight.didm</groupId>
+      <artifactId>didm-features</artifactId>
+      <version>${didm.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+
     <!-- test to validate features.xml -->
     <dependency>
       <groupId>org.opendaylight.odlparent</groupId>
