--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
     <checkstyle.version>2.13</checkstyle.version>
     <enforcer.version>1.3.1</enforcer.version>
     <snmp.plugin.version>1.0-SNAPSHOT</snmp.plugin.version>
+    <didm.version>0.1.0-SNAPSHOT</didm.version>
   </properties>
   <modules>
     <module>distributions/</module>
