Adding vpnservice features
1) Feature Tests Pass:
https://jenkins.opendaylight.org/releng/job/vpnservice-merge-master/org.opendaylight.vpnservice$vpnservice-features/5/testReport/
2) Features Comply with Guidelines:
https://git.opendaylight.org/gerrit/gitweb?p=vpnservice.git;a=blob;f=features/src/main/features/features.xml;hb=HEAD
        a) Feature Names (prefixed with 'odl-'): odl-vpnservice-core
        b) Features Descriptions: Present
        c) Features Start-Levels: None
3) Features Tested: Features have been tested for functionality with
        a) feature:install odl-vpnservice-core
        b) feature:install odl-vpnservice-core,odl-integration-compatible-with-all
4) Integration Test Impact: None

Change-Id: I77d9187e7f5139dabbec698e7b92bcabfd84ecd6
Signed-off-by: Vishal Thapar <vishal.thapar@ericsson.com>

--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -282,6 +282,14 @@
       <type>xml</type>
     </dependency>
 
+    <dependency>
+      <groupId>org.opendaylight.vpnservice</groupId>
+      <artifactId>vpnservice-features</artifactId>
+      <version>${feature.vpnservice.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+
     <!-- test to validate features.xml -->
     <dependency>
       <groupId>org.opendaylight.odlparent</groupId>
