--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
     <enforcer.version>1.3.1</enforcer.version>
     <snmp.plugin.version>1.0-SNAPSHOT</snmp.plugin.version>
     <didm.version>0.1.0-SNAPSHOT</didm.version>
+    <feature.vpnservice.version>1.0-SNAPSHOT</feature.vpnservice.version>
   </properties>
   <modules>
     <module>distributions/</module>
