Adding lacp feature
1)Feature Tests Pass:
https://jenkins.opendaylight.org/releng/job/lacp-merge-master/33/org.opendaylight.lacp$features-lacp/testReport/

2) Features Comply with Guidelines:
https://git.opendaylight.org/gerrit/gitweb?p=lacp.git;a=blob;f=features/src/main/features/features.xml
    a) Feature Names: Prefixed with 'odl-' : odl-lacp-ui, odl-lacp-rest
    b) Features Descriptions: Present
    c) Features Start-Levels: No start-levels on bundle elements or feature elements

3) Features Tested: Features have been tested for functionality with
    a) feature:install odl-lacp-ui
    b) feature:install odl-integration-compatible-with-all

4) Integration Test Impact - none

Change-Id: I2cc7bdf237b75c40e113f1e53ca15ff3bb66e636
Signed-off-by: kalaiselvik <Kalaiselvi_K@Dell.com>

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
     <snmp.plugin.version>1.0-SNAPSHOT</snmp.plugin.version>
     <didm.version>0.1.0-SNAPSHOT</didm.version>
     <feature.vpnservice.version>1.0-SNAPSHOT</feature.vpnservice.version>
+    <feature.lacp.version>1.0.0-SNAPSHOT</feature.lacp.version>
   </properties>
   <modules>
     <module>distributions/</module>
