--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -289,6 +289,13 @@
       <classifier>features</classifier>
       <type>xml</type>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.lacp</groupId>
+      <artifactId>features-lacp</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
 
     <!-- test to validate features.xml -->
     <dependency>
